fix: layout shift with opened dialog

--- a/src/styles/elements.css
+++ b/src/styles/elements.css
@@ -59,6 +59,7 @@ textarea {
   border: var(--border-size-1) solid var(--surface-1);
 }
 
-body:has(dialog[open]) {
+html:has(dialog[open]) {
   overflow: hidden;
+  scrollbar-gutter: stable
 }
